// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CovidResultGuidance displays guidance for "NEGATIVE" result 1`] = `
<div>
  <div
    class="sr-margin-bottom-28px"
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
    <p>
      Contact your health care provider to decide if additional testing is needed, especially if you experience any of these symptoms:
    </p>
    <ul
      class="sr-multi-column"
    >
      <li>
        Fever or chills
      </li>
      <li>
        Cough
      </li>
      <li>
        Shortness of breath or difficulty breathing
      </li>
      <li>
        Fatigue
      </li>
      <li>
        Muscle or body aches
      </li>
      <li>
        Headache
      </li>
      <li>
        Loss of taste or smell
      </li>
      <li>
        Sore throat
      </li>
      <li>
        Congestion or runny nose
      </li>
      <li>
        Nausea or vomiting
      </li>
      <li>
        Diarrhea
      </li>
    </ul>
    <p>
      For more information, please visit the 
      <a
        href="https://www.cdc.gov/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Centers for Disease Control and Prevention (CDC)
      </a>
       website or contact
your local health department.
    </p>
  </div>
</div>
`;

exports[`CovidResultGuidance displays guidance for "NEGATIVE" result 2`] = `
<div>
  <div
    class=""
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
    <p>
      Contact your health care provider to decide if additional testing is needed, especially if you experience any of these symptoms:
    </p>
    <ul
      class=""
    >
      <li>
        Fever or chills
      </li>
      <li>
        Cough
      </li>
      <li>
        Shortness of breath or difficulty breathing
      </li>
      <li>
        Fatigue
      </li>
      <li>
        Muscle or body aches
      </li>
      <li>
        Headache
      </li>
      <li>
        Loss of taste or smell
      </li>
      <li>
        Sore throat
      </li>
      <li>
        Congestion or runny nose
      </li>
      <li>
        Nausea or vomiting
      </li>
      <li>
        Diarrhea
      </li>
    </ul>
    <p>
      For more information, please visit the 
      <a
        href="https://www.cdc.gov/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Centers for Disease Control and Prevention (CDC)
      </a>
       website or contact
your local health department.
    </p>
  </div>
</div>
`;

exports[`CovidResultGuidance displays guidance for "POSITIVE" result 1`] = `
<div>
  <div
    class="sr-margin-bottom-28px"
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
    <p>
      Most people who get COVID-19 are able to recover at home. Make sure to follow CDC guidelines and local laws for people who are recovering at home and their caregivers, including:
    </p>
    <ul>
      <li>
        Stay home when you are sick, except to get medical care.
      </li>
      <li>
        Stay home for 5 days. If you have no symptoms or your symptoms are resolving after 5 days, you can leave your house. Continue to wear a mask around others for 5 additional days.
      </li>
      <li>
        If you are self isolating at home where others live, use a separate room and bathroom for sick household members (if possible). Clean any shared rooms as needed, to avoid transmitting the virus.
      </li>
      <li>
        Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food.
      </li>
      <li>
        If soap and water are not available, use an alcohol-based hand sanitizer with at least 60% alcohol.
      </li>
      <li>
        Have a supply of clean, disposable face masks. Everyone, no matter their COVID-19 diagnosis, should wear face masks while in the home.
      </li>
    </ul>
    <p>
      Watch for symptoms and learn when to seek emergency medical attention: 
      <a
        href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Symptoms of COVID-19
      </a>
       (cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html). If someone is showing any of these signs, seek emergency medical care immediately:
    </p>
    <ul>
      <li>
        Trouble breathing
      </li>
      <li>
        Persistent chest pain/pressure
      </li>
      <li>
        Confusion
      </li>
      <li>
        Inability to wake or stay awake
      </li>
      <li>
        Bluish lips or face
      </li>
    </ul>
    <p>
      Call 911 or call ahead to your local emergency room: Notify the operator that you are seeking care for someone who has or may have COVID-19.
    </p>
    <p>
      For more information go to 
      <a
        href="https://www.cdc.gov/"
        rel="noopener noreferrer"
        target="_blank"
      >
        CDC.gov
      </a>
       or call 1-800-CDC-INFO (1-800-232-4636). Use the 
      <a
        href="https://www.cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        County Check Tool
      </a>
       (cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html) to understand your Community Level (COVID-19 risk and hospital capacity in your area), tips for prevention, and how to find vaccine, testing, and treatment resources.
    </p>
  </div>
</div>
`;

exports[`CovidResultGuidance displays guidance for "POSITIVE" result 2`] = `
<div>
  <div
    class=""
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
    <p>
      Most people who get COVID-19 are able to recover at home. Make sure to follow CDC guidelines and local laws for people who are recovering at home and their caregivers, including:
    </p>
    <ul>
      <li>
        Stay home when you are sick, except to get medical care.
      </li>
      <li>
        Stay home for 5 days. If you have no symptoms or your symptoms are resolving after 5 days, you can leave your house. Continue to wear a mask around others for 5 additional days.
      </li>
      <li>
        If you are self isolating at home where others live, use a separate room and bathroom for sick household members (if possible). Clean any shared rooms as needed, to avoid transmitting the virus.
      </li>
      <li>
        Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food.
      </li>
      <li>
        If soap and water are not available, use an alcohol-based hand sanitizer with at least 60% alcohol.
      </li>
      <li>
        Have a supply of clean, disposable face masks. Everyone, no matter their COVID-19 diagnosis, should wear face masks while in the home.
      </li>
    </ul>
    <p>
      Watch for symptoms and learn when to seek emergency medical attention: 
      <a
        href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html"
      >
        Symptoms of COVID-19
      </a>
       (cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html). If someone is showing any of these signs, seek emergency medical care immediately:
    </p>
    <ul>
      <li>
        Trouble breathing
      </li>
      <li>
        Persistent chest pain/pressure
      </li>
      <li>
        Confusion
      </li>
      <li>
        Inability to wake or stay awake
      </li>
      <li>
        Bluish lips or face
      </li>
    </ul>
    <p>
      Call 911 or call ahead to your local emergency room: Notify the operator that you are seeking care for someone who has or may have COVID-19.
    </p>
    <p>
      For more information go to 
      <a
        href="https://www.cdc.gov/"
        rel="noopener noreferrer"
        target="_blank"
      >
        CDC.gov
      </a>
       or call 1-800-CDC-INFO (1-800-232-4636). Use the 
      <a
        href="https://www.cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        County Check Tool
      </a>
       (cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html) to understand your Community Level (COVID-19 risk and hospital capacity in your area), tips for prevention, and how to find vaccine, testing, and treatment resources.
    </p>
  </div>
</div>
`;

exports[`CovidResultGuidance displays guidance for "UNDETERMINED" result 1`] = `
<div>
  <div
    class="sr-margin-bottom-28px"
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
    <p>
      An inconclusive result is neither positive nor negative. This can happen because of problems with the sample collection, a very early-stage COVID-19 infection, or for patients with COVID-19 that are close to recovery. With an inconclusive result, collecting and testing another sample is recommended.
    </p>
  </div>
</div>
`;

exports[`CovidResultGuidance displays guidance for "UNDETERMINED" result 2`] = `
<div>
  <div
    class=""
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
    <p>
      An inconclusive result is neither positive nor negative. This can happen because of problems with the sample collection, a very early-stage COVID-19 infection, or for patients with COVID-19 that are close to recovery. With an inconclusive result, collecting and testing another sample is recommended.
    </p>
    <p>
      Please make an appointment for another test as soon as possible. If you’ve gotten tested due to COVID-19 symptoms, it is recommended that you self-isolate until you get your new test results.
    </p>
  </div>
</div>
`;

exports[`CovidResultGuidance displays guidance for "UNKNOWN" result 1`] = `
<div>
  <div
    class="sr-margin-bottom-28px"
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
  </div>
</div>
`;

exports[`CovidResultGuidance displays guidance for "UNKNOWN" result 2`] = `
<div>
  <div
    class=""
  >
    <p
      class="text-bold sr-guidance-heading"
    >
      For COVID-19:
    </p>
  </div>
</div>
`;
